Move family recipes back to recipe routes, and make it accesible without the need of login, and not specific to a user
